--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           <%# ----- end of flash lines ----- %>
 
           <%# ----- current_user infor ----- %>
-            <% if current_user %>
+            <% if !current_user %>
             <% current_user.attributes.each do |k, v| %>
               <b><%= k %>:</b> <%= v %> <br>
             <% end %>
