--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,22 +1,25 @@
-<div class="container md-12">
+<div class="container">
     <div class="row">
-    <% @jobs.each do |job| %>
-      <div class="card m-1 p-2 pb-0 mb-0">
-         <span><a href="https:<%= job.fetch(:link)%>"><strong><%= job.fetch(:title) %></strong>
-             <div class="card-title">
-                <small class="text-muted pull-right"> <%= job.fetch(:date) %>
-                <br>
-                <%= job.fetch(:company_name) %></small></a></span>
+        <div class="col-md-12">
+        <% @jobs.each do |job| %>
+        <div class="card m-1 p-2 pb-0 mb-0">
+            <span><a href="https:<%= job.fetch(:link)%>"><strong><%= job.fetch(:title) %></strong></a></span>
+                <div class="card-title">
+                    <small class="text-muted pull-right"> <%= job.fetch(:date) %>
+                    <br>
+                    <%= job.fetch(:company_name) %></small>
+                </div>
+                <div class="">
+                    <p class="card-text">
+                        <small class="text-muted "> <%= job.fetch(:location) %></small>
+                            <br>
+                        <%= job.fetch(:content) %>
+                    </p>
+                </div>
             </div>
-             <div class="">
-                <p class="card-text">
-                    <small class="text-muted "> <%= job.fetch(:location) %></small>
-                        <br>
-                    <%= job.fetch(:content) %>
-                </p>
-            </div>
+           <% end %>
         </div>
-        <% end %>
     </div>
 </div>
+
                 
