--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -13,7 +13,8 @@
                     <p class="card-text">
                         <small class="text-muted "> <%= job.fetch(:location) %></small>
                             <br>
-                        <%= job.fetch(:content) %>
+                        <%= job.fetch(:content) + " ..." %>
+                        <% "#{job.fetch(:content)} ..."%>
                     </p>
                 </div>
             </div>
@@ -21,5 +22,6 @@
         </div>
     </div>
 </div>
+
 
                 
