--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12" id="search_result">
-             <%= render(partial: 'show') %>
+            <%= render partial:'show',remote:true %>
+
      
                 <!-- hidden form to refresh search result -->
                 <div class="form-inline" id="hiddenForm"> 
