--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
 
                      
                       <!-- Edit Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-remote="<%= user_edit_path(@user) %>">Edit Profile</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-remote="<%= user_edit_path(@user) %> #modal-edit-fields">Edit Profile</button>
 
 
 
