--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,22 +5,24 @@
             Sign Up
     </span> 
     
-<%= simple_form_for(@user) do |f| %>
+<%= simple_form_for(@user,  wrapper_mappings: {
+  
+    file:          :custom_file}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :name, input_html: {class: "form-control mb-4",id:"defaultLoginFormEmail",placeholder:"Name"}, label: false%>
  
-    <div class="wrap-input100 validate-input m-b-20">
-      <%= f.file_field :avatar  %>  
-    </div>
+    
+         <%= f.input :avatar, as: :file%> 
+  
 
     <%= f.input :email,required: true,autofocus: true ,
                 input_html: { autocomplete: "email",class: "form-control mb-4",id:"defaultLoginFormEmail" ,placeholder:"E-mail"}, label: false %>
     <%= f.input :password,
                 required: true,
-                hint: 'Minimum 6 characters.',,
-                input_html: { autocomplete: "new-password",class: "form-control mb-4",id:"defaultLoginFormPassword" ,placeholder:"Password",maxlength: 6 }}, label: false %>
+                hint: 'Minimum 6 characters.',
+                input_html: { autocomplete: "new-password",class: "form-control mb-4",id:"defaultLoginFormPassword" ,placeholder:"Password",minlength: 6 }, label: false %>
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" ,class: "form-control mb-4",id:"defaultLoginFormPassword",placeholder:"Password Confirmation"}, label: false %>
