--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12" id="search_result">
+         <div class="text-muted">
+           Result 
+            </div>
             <%= render partial:'show',remote:true %>
 
      
