--- a/app/views/search/_show.html.erb
+++ b/app/views/search/_show.html.erb
@@ -4,7 +4,7 @@
           
         <% @jobs.each do |job| %>
 
-          <div class="card m-2 p-2 pb-0">
+        <div class="card m-1 p-3 mb-3 shadow">
             <div class="row">
              <div class="col-sm-10">
                 <a href="https:<%= job.fetch(:link)%>"><strong><%= job.fetch(:title) %></strong></a>
