--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
 
 <!-- For page header -->
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center m-2">
             <div class="fb-page text-center" 
                 data-href="https://www.facebook.com/BBD497/"
                 data-width="580" >
@@ -17,8 +17,11 @@
 <!-- job lists -->
     <div class="row">
         <div class="col-md-8">
+            <div class="text-muted">
+              Job List
+            </div>
         <% @jobs.each do |job| %>
-        <div class="card m-1 p-2 pb-0 mb-3">
+        <div class="card m-1 p-3 mb-3 shadow">
             <span><a href="https:<%= job.fetch(:link)%>"><strong><%= job.fetch(:title) %></strong></a></span>
                 <div class="card-title">
                     <small class="text-muted pull-right"> <%= job.fetch(:date) %>
