--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-
+<%# 
 <!-- For page header -->
     <div class="row">
         <div class="col-md-12 text-center m-2">
@@ -8,7 +8,7 @@
                 data-width="580" >
             </div>
     </div>
-</div>
+</div> %>
      
 
 <br>
@@ -40,7 +40,7 @@
            <% end %>
         </div>
 
-
+<%# 
 <!-- timeline facebook -->
          <div class="col-md-4">
             <div class="fb-page" data-href="https://www.facebook.com/BBD497/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/BBD497/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/BBD497/">百宝  .  袋</a></blockquote></div>
@@ -61,5 +61,5 @@
     js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=2162517297298156&autoLogAppEvents=1';
     fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-</script>
+</script> %>
 
