--- a/app/views/job/_show.html.erb
+++ b/app/views/job/_show.html.erb
@@ -8,7 +8,7 @@
         <div class="card m-1 p-3 mb-3 shadow">
             <span><strong><%= job.name %></strong></span>
                 <div class="card-title">
-                    <small class="text-muted pull-right"> <%= job.price %></small>
+                    <small class="text-muted pull-right">Salary : <%= job.price %></small>
                 </div>
                 <div class="">
                     <p class="card-text">
