--- a/app/views/job/index.html.erb
+++ b/app/views/job/index.html.erb
@@ -26,7 +26,7 @@
         <span><a href="#"><strong><%= job.name %></strong></a></span>
        
                 <div class="card-title">
-                    <small class="text-muted pull-right"> <%= job.price %></small>
+                    <small class="text-muted pull-right">Salary :<%= job.price %></small>
                 </div>
                 <div class="">
                     <p class="card-text">
