Finally donegit add .

--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="modal-body">
       
-    <%= simple_form_for( @user ,url: user_edit_path, id:"hide" ,remote:true,
+    <%= simple_form_for( @user ,url: user_edit_path, id:"edit" ,remote:true,
     wrapper_mappings: {
     boolean:       :custom_boolean,
     check_boxes:   :custom_collection,
