--- a/app/views/testings/index.html.erb
+++ b/app/views/testings/index.html.erb
@@ -24,6 +24,7 @@
         <td><%= testing.postcode %></td>
         <td><%= testing.birthday %></td>
         <td><%= testing.daylight %></td>
+        <td><%= testing.jobs %></td>
         <td><%= link_to 'Show', testing %></td>
         <td><%= link_to 'Edit', edit_testing_path(testing) %></td>
         <td><%= link_to 'Destroy', testing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
